Bug 846929 - Instead of directly overwriting the style attribute to give a zoom in/zoom out cursor on very large images (when they overflow), add/remove classes that will change the cursor. r=roc
UltraBlame original commit: de2a0438c81bb9dbed05849386c1bf24e9571f82

--- a/toolkit/themes/osx/global/media/TopLevelImageDocument.css
+++ b/toolkit/themes/osx/global/media/TopLevelImageDocument.css
@@ -77,6 +77,32 @@ color
 ;
 }
 .
+overflowing
+{
+cursor
+:
+-
+moz
+-
+zoom
+-
+out
+;
+}
+.
+shrinkToFit
+{
+cursor
+:
+-
+moz
+-
+zoom
+-
+in
+;
+}
+.
 completeRotation
 {
 transition
